tests/NormalTests/paczka1/fuzzy1/44559484.err
Error in line 2: 4czIXvB S104 8,7
Error in line 1: A301 S669 64,6
Error in line 13: A301 S104 83,6
Error in line 10: 0Nuc A301 80,1
Error in line 25: 4czIXvB A348 9,3
Error in line 23: RpUjI A301 328,5
Error in line 21: FwN9KG A301 21,2
Error in line 30: 0Nuc S669 6,0
Error in line 32: FwN9KG S669 14,8
